--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   height: 100vh;
 }
 .container {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,4 +24,8 @@ input,
 select {
   width: 350px;
   height: 25px;
+}
+.btn {
+  display: flex;
+  justify-content: center;
 }
