--- a/style.css
+++ b/style.css
@@ -20,22 +20,29 @@ body {
 .inp-city,
 .select-cond {
   display: inline;
+  width: 350px;
+  height: 25px;
 }
 input,
 select {
   width: 350px;
   height: 25px;
 }
-.btn {
-}
+
 .result {
   background-color: blueviolet;
   width: 200px;
-  height: 200px;
+  height: 100px;
 }
 .content {
+  background-color: cadetblue;
+  width: 300px;
+  height: 200px;
   display: flex;
-
-  justify-content: center;
+  flex-direction: column;
   align-content: center;
+  justify-content: center;
+}
+button {
+  width: 100px;
 }
