--- a/style.css
+++ b/style.css
@@ -9,13 +9,15 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-content: center;
+  gap: 2rem;
+  align-items: space-evenly;
 }
 .input-container {
   width: 100%;
   height: 20%;
   display: flex;
   justify-content: center;
+  align-items: flex-start;
 }
 .inp-city,
 .select-cond {
@@ -35,13 +37,15 @@ select {
   height: 100px;
 }
 .content {
+  margin: 0 auto;
   background-color: cadetblue;
   width: 300px;
   height: 200px;
   display: flex;
   flex-direction: column;
-  align-content: center;
+  align-items: center;
   justify-content: center;
+  text-align: center;
 }
 button {
   width: 100px;
