--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+* {
+  font-family: "Roboto", sans-serif;
+}
 body {
   background-color: rgb(248, 238, 225);
   width: 100vw;
@@ -9,7 +12,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 2rem;
+
   align-items: space-evenly;
 }
 .input-container {
@@ -25,21 +28,32 @@ body {
   width: 350px;
   height: 25px;
 }
+input {
+}
 input,
 select {
+  margin: 0 10px;
   width: 350px;
-  height: 25px;
+  height: 40px;
+  letter-spacing: 0.2rem;
+  font-weight: bold;
+  font-size: 16px;
+  padding-left: 0.5rem;
+  outline: none;
+  border-radius: 10px;
+  border: none;
+  background-color: darkgray;
+  color: rgb(78, 77, 77);
 }
 
 .result {
-  background-color: blueviolet;
-  width: 200px;
+  width: 400px;
   height: 100px;
 }
 .content {
   margin: 0 auto;
-  background-color: cadetblue;
-  width: 300px;
+
+  width: 500px;
   height: 200px;
   display: flex;
   flex-direction: column;
@@ -49,4 +63,27 @@ select {
 }
 button {
   width: 100px;
+  margin-bottom: 2rem;
+  border-radius: 0.4rem;
+  border: none;
+  background-color: rgb(219, 211, 211);
+  padding: 5px 10px;
+  transition: 700ms;
+  color: rgb(78, 77, 77);
+}
+h1,
+h2 {
+  letter-spacing: 0.3rem;
+  color: rgb(78, 77, 77);
+}
+select {
+  height: 40px;
+  text-align: center;
+}
+input[type="text"] {
+  background-color: darkgray;
+}
+button:hover {
+  background-color: rgb(175, 168, 168);
+  color: rgb(31, 29, 29);
 }
