--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ select {
   outline: none;
   border-radius: 10px;
   border: none;
-  background-color: darkgray;
+  background-color: rgb(219, 211, 211);
   color: rgb(78, 77, 77);
 }
 
@@ -79,9 +79,12 @@ h2 {
 select {
   height: 40px;
   text-align: center;
+  font-size: 20px;
 }
 input[type="text"] {
   background-color: darkgray;
+  font-size: 20px;
+  text-align: center;
 }
 button:hover {
   background-color: rgb(175, 168, 168);
