--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ select {
   font-size: 20px;
 }
 input[type="text"] {
-  background-color: darkgray;
+  background-color: rgb(219, 211, 211);
   font-size: 20px;
   text-align: center;
 }
